prevents shifting of elements while img loads

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -474,6 +474,8 @@ p.hamster {
 
 .inventoryItemName > img, .equipItemName > img {
     padding: 10px;
+    height: 56px;
+    width: 56px;
     background-color: rgba(0,0,0,0.25);
     border: 2px solid var(--border-primary);
     border-radius: 10px;
